Switch to using new forcing module

--- a/examples/pcrglobwb.ipynb
+++ b/examples/pcrglobwb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d100c85e",
+   "id": "163b3765",
    "metadata": {},
    "source": [
     "# Running PCRGlobWB using the eWaterCycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfa8b241",
+   "id": "969395c0",
    "metadata": {
     "tags": []
    },
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bbfa81c9",
+   "id": "02bb96f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,20 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "32b582bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ewatercycle\n",
-    "ewatercycle.CFG['container_engine'] = 'docker'  # or 'singularity'\n",
-    "ewatercycle.CFG['singularity_dir'] = './'\n",
-    "ewatercycle.CFG['output_dir'] = './'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "78959d82",
+   "id": "917da325",
    "metadata": {},
    "outputs": [
     {
@@ -71,13 +58,27 @@
     }
    ],
    "source": [
-    "import ewatercycle.models"
+    "import ewatercycle\n",
+    "import ewatercycle.models\n",
+    "import ewatercycle.forcing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "76bb220b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ewatercycle.CFG['container_engine'] = 'docker'  # or 'singularity'\n",
+    "ewatercycle.CFG['singularity_dir'] = './'\n",
+    "ewatercycle.CFG['output_dir'] = './'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6a8cc5b3",
+   "id": "27f6c1d4",
    "metadata": {},
    "outputs": [
     {
@@ -99,36 +100,35 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "19679dc2",
+   "id": "535f1ecb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PCRGlobWBForcing(precipitationNC=PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_example_case/forcing/precipitation_2001to2010.nc'), temperatureNC=PosixPath('/home/peter/ewatercycle/ewatercycle/examples/temperature_2001to2010.nc'), refETPotFileNC='')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/peter/ewatercycle/ewatercycle/ewatercycle/models/pcrglobwb.py:48: UserWarning: No valid input path received for refETPotFileNC, defaulting to ''.\n"
+      "PCRGlobWBForcing(start_time='2001-01-01T00:00:00Z', end_time='2010-12-31T00:00:00Z', directory='./pcrglobwb_example_case/forcing', shape=None, precipitationNC='pcrglobwb_example_case/forcing/precipitation_2001to2010.nc', temperatureNC='temperature_2001to2010.nc')\n"
      ]
     }
    ],
    "source": [
-    "forcing = ewatercycle.models.pcrglobwb.PCRGlobWBForcing(\n",
-    "    precipitationNC = \"pcrglobwb_example_case/forcing/precipitation_2001to2010.nc\",\n",
-    "    temperatureNC = \"temperature_2001to2010.nc\"\n",
-    ")\n",
+    "forcing = ewatercycle.forcing.load_foreign(\n",
+    "    target_model = \"pcrglobwb\",\n",
+    "    start_time = \"2001-01-01T00:00:00Z\",\n",
+    "    end_time = \"2010-12-31T00:00:00Z\",\n",
+    "    directory = \"./pcrglobwb_example_case/forcing\",\n",
+    "    shape = None,\n",
+    "    forcing_info = dict(\n",
+    "        precipitationNC = \"pcrglobwb_example_case/forcing/precipitation_2001to2010.nc\",\n",
+    "        temperatureNC = \"temperature_2001to2010.nc\"\n",
+    "))\n",
     "print(forcing)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5b0803f1",
+   "id": "c52b6d53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b989c011",
+   "id": "56f928e1",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "  {'inputDir': '/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_example_case',\n",
        "   'cloneMap': 'cloneMaps/RhineMeuse30min.map',\n",
        "   'landmask': 'None',\n",
-       "   'outputDir': '/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210519_160713',\n",
+       "   'outputDir': '/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210609_143113',\n",
        "   'spinUpOutputDir': 'True',\n",
        "   'institution': 'Department of Physical Geography, Utrecht University',\n",
        "   'title': 'PCR-GLOBWB output',\n",
@@ -164,7 +164,7 @@
        "  {'precipitationNC': '/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_example_case/forcing/precipitation_2001to2010.nc',\n",
        "   'temperatureNC': '/home/peter/ewatercycle/ewatercycle/examples/temperature_2001to2010.nc',\n",
        "   'referenceETPotMethod': 'Hamon',\n",
-       "   'refETPotFileNC': '/home/peter/ewatercycle/ewatercycle/examples'}),\n",
+       "   'refETPotFileNC': 'forcing/CRU-TS3.21/merged_1958_to_2010/CRU-TS3.21_ERA-40_ERA-Interim_daily_referencePotET_1958_to_2010.nc'}),\n",
        " ('landSurfaceOptions',\n",
        "  {'debugWaterBalance': 'True',\n",
        "   'numberOfUpperSoilLayers': '2',\n",
@@ -320,14 +320,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5af6b0d9",
+   "id": "ee17a857",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210519_160713/pcrglobwb_ewatercycle.ini'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210519_160713'))"
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210609_143113/pcrglobwb_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210609_143113'))"
       ]
      },
      "execution_count": 7,
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ea1f6718",
+   "id": "bb544fdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c8cd5fe7",
+   "id": "02a3977c",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "38dd54be",
+   "id": "26a076bc",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a52e1a25",
+   "id": "b43955c9",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
        "  * latitude   (latitude) float64 46.25 46.75 47.25 47.75 ... 51.25 51.75 52.25\n",
        "    time       object 2000-12-31 00:00:00\n",
        "Attributes:\n",
-       "    units:    m3.s-1</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 13</li><li><span class='xr-has-index'>longitude</span>: 17</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-f3d2c8d5-df22-4ab5-b5f5-cd91009a93b6' class='xr-array-in' type='checkbox' checked><label for='section-f3d2c8d5-df22-4ab5-b5f5-cd91009a93b6' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
+       "    units:    m3.s-1</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 13</li><li><span class='xr-has-index'>longitude</span>: 17</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-9506b45f-52a2-4cb8-81cc-eaf55a028edf' class='xr-array-in' type='checkbox' checked><label for='section-9506b45f-52a2-4cb8-81cc-eaf55a028edf' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
        "        nan, nan, nan, nan],\n",
        "       [nan, nan, nan, nan, nan, nan,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
        "        nan, nan, nan, nan],\n",
@@ -922,9 +922,9 @@
        "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0., nan, nan, nan, nan,\n",
        "        nan, nan, nan, nan],\n",
        "       [nan,  0.,  0.,  0.,  0., nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "        nan, nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-b3b88716-0a5c-4bcc-a711-eeecb877217c' class='xr-section-summary-in' type='checkbox'  checked><label for='section-b3b88716-0a5c-4bcc-a711-eeecb877217c' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>3.75 4.25 4.75 ... 11.25 11.75</div><input id='attrs-b41a5b19-76bd-4040-9a78-d838c84f323d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-b41a5b19-76bd-4040-9a78-d838c84f323d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-d82fac25-43e3-4a53-9fef-dbab60d94a02' class='xr-var-data-in' type='checkbox'><label for='data-d82fac25-43e3-4a53-9fef-dbab60d94a02' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 3.75,  4.25,  4.75,  5.25,  5.75,  6.25,  6.75,  7.25,  7.75,  8.25,\n",
-       "        8.75,  9.25,  9.75, 10.25, 10.75, 11.25, 11.75])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>46.25 46.75 47.25 ... 51.75 52.25</div><input id='attrs-6ad378ea-8a96-492b-9b81-7de9691da70a' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-6ad378ea-8a96-492b-9b81-7de9691da70a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-a123e3c7-c573-4701-a13d-efb00965af97' class='xr-var-data-in' type='checkbox'><label for='data-a123e3c7-c573-4701-a13d-efb00965af97' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([46.25, 46.75, 47.25, 47.75, 48.25, 48.75, 49.25, 49.75, 50.25, 50.75,\n",
-       "       51.25, 51.75, 52.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>2000-12-31 00:00:00</div><input id='attrs-4eb8e5f9-216a-435f-9341-f21e1311a08a' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-4eb8e5f9-216a-435f-9341-f21e1311a08a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-97c37a44-1cfc-4013-b025-3bcfeba00c28' class='xr-var-data-in' type='checkbox'><label for='data-97c37a44-1cfc-4013-b025-3bcfeba00c28' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(2000, 12, 31, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-551b48fc-e87b-4b0c-bdd5-abafc22d5688' class='xr-section-summary-in' type='checkbox'  checked><label for='section-551b48fc-e87b-4b0c-bdd5-abafc22d5688' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m3.s-1</dd></dl></div></li></ul></div></div>"
+       "        nan, nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-54c8f078-e8e3-4dc4-ad30-8fbd3df2a42d' class='xr-section-summary-in' type='checkbox'  checked><label for='section-54c8f078-e8e3-4dc4-ad30-8fbd3df2a42d' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>3.75 4.25 4.75 ... 11.25 11.75</div><input id='attrs-1fedddcc-57ac-4450-96e8-ee6e5c88ade4' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-1fedddcc-57ac-4450-96e8-ee6e5c88ade4' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-450c71ed-70cf-4249-9db9-445dd55f702c' class='xr-var-data-in' type='checkbox'><label for='data-450c71ed-70cf-4249-9db9-445dd55f702c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 3.75,  4.25,  4.75,  5.25,  5.75,  6.25,  6.75,  7.25,  7.75,  8.25,\n",
+       "        8.75,  9.25,  9.75, 10.25, 10.75, 11.25, 11.75])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>46.25 46.75 47.25 ... 51.75 52.25</div><input id='attrs-7d592c1e-1704-4537-b3d7-b2885ad9de26' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-7d592c1e-1704-4537-b3d7-b2885ad9de26' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-3c40257d-9bd5-4593-99ae-17755f5c633b' class='xr-var-data-in' type='checkbox'><label for='data-3c40257d-9bd5-4593-99ae-17755f5c633b' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([46.25, 46.75, 47.25, 47.75, 48.25, 48.75, 49.25, 49.75, 50.25, 50.75,\n",
+       "       51.25, 51.75, 52.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>2000-12-31 00:00:00</div><input id='attrs-8c097cf3-bec6-489e-bb18-480be6b77104' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-8c097cf3-bec6-489e-bb18-480be6b77104' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-ef171c4b-3afe-41c4-ba08-ee8140721c3d' class='xr-var-data-in' type='checkbox'><label for='data-ef171c4b-3afe-41c4-ba08-ee8140721c3d' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(2000, 12, 31, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-50ab3a31-5540-4b34-8c82-ca6ec37333ff' class='xr-section-summary-in' type='checkbox'  checked><label for='section-50ab3a31-5540-4b34-8c82-ca6ec37333ff' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m3.s-1</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'discharge' (latitude: 13, longitude: 17)>\n",
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "78afe6ec",
+   "id": "704bc572",
    "metadata": {},
    "outputs": [
     {
@@ -1005,13 +1005,13 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9f986cfd",
+   "id": "22fb930d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7ffa03131460>"
+       "<matplotlib.collections.QuadMesh at 0x7f6a4bcc50d0>"
       ]
      },
      "execution_count": 13,
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2425feb9",
+   "id": "fb610dc2",
    "metadata": {},
    "outputs": [],
    "source": []
