Add __str__ methods on the forcing and parametersets

--- a/examples/pcrglobwb.ipynb
+++ b/examples/pcrglobwb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3e955a58",
+   "id": "a9ea3adf",
    "metadata": {},
    "source": [
     "# Running PCRGlobWB using the eWaterCycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d931d93",
+   "id": "5762c4c3",
    "metadata": {
     "tags": []
    },
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2c7e6d51",
+   "id": "f25e4ea6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "435bf471",
+   "id": "96eb064c",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "68956924",
+   "id": "7feee2fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,14 +78,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c0c1cea2",
+   "id": "2ff1fa75",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PCRGlobWBParameterSet(input_dir=PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_example_case'), default_config=PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_example_case/setup.ini'))\n"
+      "Wflow parameter set\n",
+      "-------------------\n",
+      "Directory: /home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_example_case\n",
+      "Default config: /home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_example_case/setup.ini\n"
      ]
     }
    ],
@@ -100,14 +103,22 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0f7bb6cb",
+   "id": "68a9071b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PCRGlobWBForcing(start_time='2001-01-01T00:00:00Z', end_time='2010-12-31T00:00:00Z', directory='./pcrglobwb_example_case/forcing', shape=None, precipitationNC='precipitation_2001to2010.nc', temperatureNC='temperature_2001to2010.nc')\n"
+      "Forcing data for PCRGlobWB\n",
+      "--------------------------\n",
+      "Directory: ./pcrglobwb_example_case/forcing\n",
+      "Start time: 2001-01-01T00:00:00Z\n",
+      "End time: 2010-12-31T00:00:00Z\n",
+      "Shapefile: None\n",
+      "Additional information for model config:\n",
+      "  - temperatureNC: temperature_2001to2010.nc\n",
+      "  - precipitationNC: precipitation_2001to2010.nc\n"
      ]
     }
    ],
@@ -128,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f7bd40d6",
+   "id": "27127bf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8a67ead1",
+   "id": "78b53aa1",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "60764f41",
+   "id": "3a6cc094",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "105f4aca",
+   "id": "3d92278f",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c3ee765e",
+   "id": "0ad51408",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7a789f73",
+   "id": "15c38b01",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bda890f2",
+   "id": "63ccde2f",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ed638ffa",
+   "id": "1695cc60",
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c3c11fd0",
+   "id": "5a1ceb7a",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c0865084",
+   "id": "6b5705bb",
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "746a9586",
+   "id": "618596e2",
    "metadata": {},
    "outputs": [],
    "source": []
