Verify singularity also works

--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d1375393",
+   "id": "00534415",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b52b0590",
+   "id": "315fe0d6",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd23c2f7",
+   "id": "bafa2b07",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "073ef9dc",
+   "id": "ee762746",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -55,12 +55,12 @@
     "In order for this to work, you need to make sure that the actual docker or singularity images are available on the system. This can be done with:\n",
     "\n",
     "- Docker: `docker pull ewatercycle/wflow-grpc4bmi:latest`\n",
-    "- Singularity: `singularity pull docker://ewatercycle/wflow-grpc4bmi:latest`"
+    "- Singularity: `singularity run docker://ewatercycle/wflow-grpc4bmi:latest` --> this will store a cached image."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5a9c98ff",
+   "id": "4a088e5c",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "65d3e7d5",
+   "id": "be5b5b32",
    "metadata": {},
    "outputs": [
     {
@@ -96,6 +96,7 @@
     }
    ],
    "source": [
+    "import ewatercycle\n",
     "import ewatercycle.models\n",
     "ewatercycle.models.Wflow.available_versions"
    ]
@@ -103,7 +104,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c16f307b",
+   "id": "3e0a0713",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ewatercycle.CFG['container_engine'] = \"singularity\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "21cd26f3",
    "metadata": {},
    "outputs": [
     {
@@ -128,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "83621cd2",
+   "execution_count": 4,
+   "id": "6ed8a617",
    "metadata": {},
    "outputs": [
     {
@@ -172,8 +183,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "61024390",
+   "execution_count": 5,
+   "id": "cf4964e9",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +193,7 @@
        "[('start_time', '1991-01-01T00:00:00Z'), ('end_time', '1991-12-31T00:00:00Z')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,12 +206,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c8832cc8",
+   "execution_count": 6,
+   "id": "3c60446f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running docker://ewatercycle/wflow-grpc4bmi:2020.1.1 singularity container on port 33661\n"
+     ]
+    }
+   ],
    "source": [
     "# Set up the model; this is where you can potentially overwrite some of the parameters\n",
     "cfg_file, cfg_dir = model.setup(end_time = \"1991-02-28T00:00:00Z\")"
@@ -208,16 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f04950db",
+   "execution_count": 7,
+   "id": "08abb219",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/peter/ewatercycle/ewatercycle/examples/wflow_20210611_102715/wflow_ewatercycle.ini\n",
-      "/home/peter/ewatercycle/ewatercycle/examples/wflow_20210611_102715\n"
+      "/home/peter/ewatercycle/ewatercycle/examples/wflow_20210611_115915/wflow_ewatercycle.ini\n",
+      "/home/peter/ewatercycle/ewatercycle/examples/wflow_20210611_115915\n"
      ]
     }
    ],
@@ -229,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea2654e9",
+   "id": "45892a19",
    "metadata": {},
    "source": [
     "#### Update the config file\n",
@@ -246,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0428ebe3",
+   "id": "87070a80",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -254,8 +273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "94069f0d",
+   "execution_count": 8,
+   "id": "6146d93e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,8 +284,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5081d323",
+   "execution_count": 9,
+   "id": "5094b1b8",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +294,7 @@
        "array([-999., -999., -999., ..., -999., -999., -999.])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,8 +306,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "268fcdde",
+   "execution_count": 10,
+   "id": "afc49fc7",
    "metadata": {
     "tags": []
    },
@@ -660,13 +679,13 @@
        "  * latitude   (latitude) float64 45.89 45.93 45.97 46.0 ... 51.98 52.02 52.05\n",
        "    time       object 1990-12-31 00:00:00\n",
        "Attributes:\n",
-       "    units:     m/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-a2c9418a-5226-4a54-aa1b-dec53177ac96' class='xr-array-in' type='checkbox' checked><label for='section-a2c9418a-5226-4a54-aa1b-dec53177ac96' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:     m/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-b756dcdd-31e2-423d-8c98-2b3f3c1048a7' class='xr-array-in' type='checkbox' checked><label for='section-b756dcdd-31e2-423d-8c98-2b3f3c1048a7' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-300c7df1-3980-4674-8b82-c754f36dd259' class='xr-section-summary-in' type='checkbox'  checked><label for='section-300c7df1-3980-4674-8b82-c754f36dd259' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-df558855-2244-4a44-bead-9296e8a4d6cc' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-df558855-2244-4a44-bead-9296e8a4d6cc' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-cb2577d1-80d2-41b1-82de-03f010407080' class='xr-var-data-in' type='checkbox'><label for='data-cb2577d1-80d2-41b1-82de-03f010407080' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-e372fc54-ba92-45f3-9c82-a2051633a85c' class='xr-section-summary-in' type='checkbox'  checked><label for='section-e372fc54-ba92-45f3-9c82-a2051633a85c' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-153db7ce-80b4-40b6-89e3-abbd8aa4ce9f' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-153db7ce-80b4-40b6-89e3-abbd8aa4ce9f' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-b57e4c65-111f-48b3-8c83-6cf7984933c3' class='xr-var-data-in' type='checkbox'><label for='data-b57e4c65-111f-48b3-8c83-6cf7984933c3' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
        "        5.447163,  5.48383 ,  5.520497,  5.557163,  5.59383 ,  5.630497,\n",
        "        5.667163,  5.70383 ,  5.740497,  5.777164,  5.81383 ,  5.850497,\n",
        "        5.887163,  5.92383 ,  5.960497,  5.997163,  6.03383 ,  6.070497,\n",
@@ -697,7 +716,7 @@
        "       11.387163, 11.42383 , 11.460497, 11.497164, 11.53383 , 11.570497,\n",
        "       11.607163, 11.64383 , 11.680496, 11.717163, 11.75383 , 11.790497,\n",
        "       11.827164, 11.86383 , 11.900496, 11.937163, 11.97383 , 12.010497,\n",
-       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-02707768-28f3-4dff-97d4-40a8cf1c1b03' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-02707768-28f3-4dff-97d4-40a8cf1c1b03' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-fcaa9287-b8ea-4cf0-afe0-45c80e516855' class='xr-var-data-in' type='checkbox'><label for='data-fcaa9287-b8ea-4cf0-afe0-45c80e516855' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
+       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-a0887cf6-6728-4e33-b4df-8caac9e53424' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-a0887cf6-6728-4e33-b4df-8caac9e53424' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-7d32638c-df60-4cac-808c-5a1fc612f8b2' class='xr-var-data-in' type='checkbox'><label for='data-7d32638c-df60-4cac-808c-5a1fc612f8b2' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
        "       46.114265, 46.150932, 46.187599, 46.224266, 46.260933, 46.2976  ,\n",
        "       46.334267, 46.370934, 46.4076  , 46.444267, 46.480934, 46.517601,\n",
        "       46.554268, 46.590935, 46.627602, 46.664268, 46.700932, 46.737598,\n",
@@ -725,7 +744,7 @@
        "       51.394268, 51.430935, 51.467602, 51.504265, 51.540932, 51.577599,\n",
        "       51.614265, 51.650932, 51.687599, 51.724266, 51.760933, 51.7976  ,\n",
        "       51.834267, 51.870934, 51.9076  , 51.944267, 51.980934, 52.017601,\n",
-       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-12-31 00:00:00</div><input id='attrs-1573fcd4-9127-4408-a12a-8efab9d7c55b' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-1573fcd4-9127-4408-a12a-8efab9d7c55b' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-4469249c-4f6a-42ae-97c8-5f08a72da22c' class='xr-var-data-in' type='checkbox'><label for='data-4469249c-4f6a-42ae-97c8-5f08a72da22c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 12, 31, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-05f47b63-c76b-44be-b77a-7187e363ba16' class='xr-section-summary-in' type='checkbox'  checked><label for='section-05f47b63-c76b-44be-b77a-7187e363ba16' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m/s</dd></dl></div></li></ul></div></div>"
+       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-12-31 00:00:00</div><input id='attrs-87411cd6-850a-46cc-bd37-df3bd2e125a6' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-87411cd6-850a-46cc-bd37-df3bd2e125a6' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-8cafd049-8042-45a6-8842-7ca770101e25' class='xr-var-data-in' type='checkbox'><label for='data-8cafd049-8042-45a6-8842-7ca770101e25' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 12, 31, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-d35f6a4f-77c6-4004-a4cd-228474e67aac' class='xr-section-summary-in' type='checkbox'  checked><label for='section-d35f6a4f-77c6-4004-a4cd-228474e67aac' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'RiverRunoff' (latitude: 169, longitude: 187)>\n",
@@ -744,7 +763,7 @@
        "    units:     m/s"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,8 +775,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "deaa5f88",
+   "execution_count": 11,
+   "id": "17b8f452",
    "metadata": {},
    "outputs": [
     {
@@ -835,17 +854,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "10567813",
+   "execution_count": 12,
+   "id": "b21adc44",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7fd69946c790>"
+       "<matplotlib.collections.QuadMesh at 0x7f07157986d0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -870,8 +889,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "55110c7c",
+   "execution_count": 13,
+   "id": "3668e89f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35ea0fa6",
+   "id": "396c4a95",
    "metadata": {},
    "outputs": [],
    "source": []
